--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost/e-insurance
-spring.datasource.username= database kullanıcı adını yaz
-spring.datasource.password= database şifreni yaz
+spring.datasource.url=jdbc:postgresql://localhost/insurance
+spring.datasource.username= kullanıcı adını yaz
+spring.datasource.password= şifreni yaz
