Work Order add added.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost/insurance
 spring.datasource.username= postgres
-spring.datasource.password= asdx1334
+spring.datasource.password= memo5934
